# FroboMind

fmApp/frobolab/frobit_v2_demo/launch/: frobit_run_wpt_nav.launch
fmApp/sdu/kasper/.metadata/: version.ini
fmApp/sdu/kasper/pose_estimator/launch/: leon.launch  odometry_gnss_pose_estimator_example.launch
fmApp/sdu/kasper/pose_estimator/src/: pose_estimator_node.py
fmApp/sdu/kasper/rsdmap/: CMakeLists.txt  package.xml
fmApp/sdu/kasper/rsdmap/src/: particlefilter.cpp  rsdmap.cpp  (+5 more)
fmApp/sdu/kasper/slamtest/: CMakeLists.txt  package.xml  rsdmap.pgm  rsdmap.yaml
fmApp/sdu/kent/redline_following/: CMakeLists.txt  _CMakeLists.txt  _package.xml  package.xml
fmApp/sdu/kent/redline_following/launch/: redline_following.launch
fmApp/sdu/kent/redline_following/msg/: Line.msg
fmApp/sdu/kent/redline_following/src/: RedlineFollowingNode.cpp  RedlineFollowingNode.h  RowExtractorNode.h
fmApp/sdu/kent/row_extractor_poc/: CMakeLists.txt
fmApp/sdu/mads/deadman/: CMakeLists.txt  package.xml
fmApp/sdu/mads/line_rviz_test/: CMakeLists.txt  package.xml
fmApp/sdu/mads/reverse/: CMakeLists.txt  package.xml
fmApp/sdu/mads/tipper/: 90-sdu-tipper-1.rules  CMakeLists.txt  package.xml
fmApp/sdu/mads/wall_follow/: CMakeLists.txt  package.xml
fmApp/sdu/mads/waypoint_navigation/: CMakeLists.txt  package.xml
fmApp/sdu/sdu_rsd_2014/launch/: rsd_sim_wall_follow.launch
fmProcessors/localization_mapping/odometry_gnss_pose_estimator/launch/: odometry_gnss_pose_estimator_example.launch
fmProcessors/localization_mapping/odometry_gnss_pose_estimator/src/: pose_estimator_node.py
(+32 files in other folders)
